<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountApp">

    <TextView
        android:id="@+id/accountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="72dp"
        android:text="@string/account_holder_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/accountName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/accountText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/accountText"
        app:layout_constraintTop_toTopOf="@+id/accountText"
        tools:text="Federico Pregnolato" />

    <TextView
        android:id="@+id/balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/balance_text"
        app:layout_constraintEnd_toEndOf="@+id/accountText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/accountText"
        app:layout_constraintTop_toBottomOf="@+id/accountText" />

    <TextView
        android:id="@+id/balanceAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/accountName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/accountName"
        app:layout_constraintTop_toBottomOf="@+id/accountName"
        tools:text="100.00" />

    <EditText
        android:id="@+id/depositInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/deposit_text"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="@+id/balance"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/deposit_text"
        app:layout_constraintEnd_toEndOf="@+id/depositInput"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/depositInput"
        app:layout_constraintTop_toBottomOf="@+id/balance" />

    <Button
        android:id="@+id/depositBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deposit_text"
        app:layout_constraintBottom_toBottomOf="@+id/depositInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toEndOf="@+id/depositInput"
        app:layout_constraintTop_toTopOf="@+id/depositInput" />

    <TextView
        android:id="@+id/input_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/input_text"
        app:layout_constraintStart_toStartOf="@+id/depositInput"
        app:layout_constraintTop_toBottomOf="@+id/depositInput" />

    <EditText
        android:id="@+id/withdrawInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:hint="@string/input_text"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="@+id/input_label"
        app:layout_constraintTop_toTopOf="@+id/input_label" />

    <Button
        android:id="@+id/withdrawBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/input_text"
        app:layout_constraintBottom_toBottomOf="@+id/withdrawInput"
        app:layout_constraintEnd_toEndOf="@+id/depositBtn"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toEndOf="@+id/withdrawInput"
        app:layout_constraintTop_toTopOf="@+id/withdrawInput"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/logoutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>